# euler-preprocess

./: .gitignore  README.md  example_item.json  main.py  package-lock.json  pyproject.toml  pytest.ini  vkitti_cpu_example_output.json  vkitti_gpu_example_output.json
.github/workflows/: workflow.yml
configs/: example_dataset_config.json  fog_stepped_config.json  radial_dataset_config.json  real_drive_sim.json  run1.json  sky_depth_config.json  sky_depth_dataset_config.json
euler_fog/: cli.py
euler_fog/common/: real_drive_sim.py
euler_fog/fog/: dcp_airlight.py  dcp_airlight_torch.py  dcp_heuristic_airlight.py  example_config.json  foggify.py
euler_preprocess/: cli.py
euler_preprocess/common/: dataset.py  device.py  intrinsics.py  io.py  logging.py  noise.py  normalize.py  output.py  sampling.py  transform.py
euler_preprocess/fog/: airlight_from_sky.py  augmentations.py  dcp_airlight.py  dcp_heuristic_airlight.py  dcp_heuristic_airlight_torch.py  example_config.json  foggify.py  foggify_logging.py  logging.py  models.py  transform.py
euler_preprocess/radial/: transform.py
euler_preprocess/sky_depth/: transform.py
src/fog/: airlight_from_sky.py  foggify.py  foggify_logging.py  sky_mask.py
tests/: __init__.py  conftest.py  test_airlight_fallback.py  test_cli_sample_selection.py  test_dcp_heuristic_airlight.py  test_fog_aux_outputs.py  test_foggify_integration.py  test_radial.py  test_sky_depth.py  test_source_backed_output.py  test_zip_output.py
