[project]
name = "euler-fog"
version = "0.4.0"
description = "Physics-based fog augmentation for RGB+depth datasets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "Pillow",
  "euler-loading @ git+https://github.com/d-rothen/euler-loading.git",
]

[project.optional-dependencies]
gpu = [
  "torch",
]
progress = [
  "tqdm",
]

[project.scripts]
euler-fog = "euler_fog.cli:main"

[tool.setuptools.packages.find]
include = ["euler_fog", "euler_fog.*"]
